# CloudSentinel

./: .gitignore  README.md  pyproject.toml
aws_cloud_security_misconfiguration_scanner/: __init__.py
src/aws_cloud_security_misconfiguration_scanner/: __init__.py  cli.py  models.py  report.py  scanner.py
tests/: test_report.py  test_scanner.py
