[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-cloud-security-misconfiguration-scanner"
version = "0.1.0"
description = "AWS cloud security misconfiguration scanner with CIS and MITRE mappings"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["boto3>=1.34.0"]

[project.scripts]
aws-misconfig-scan = "aws_cloud_security_misconfiguration_scanner.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
